statum-macros/tests/ui/invalid_machine_declared_before_state.stderr
error: Error: machine `WorkflowMachine` could not resolve its `#[state]` enum in module `invalid_machine_declared_before_state`.
       Found: `struct WorkflowMachine<WorkflowState> { ... }`
       Expected: `struct WorkflowMachine<ExpectedState> { ... }` where `ExpectedState` is a `#[state]` enum in `invalid_machine_declared_before_state`
       Fix: make the machine's first generic name the local `#[state]` enum and declare that enum before the machine.
       Reason: Expected a `#[state]` enum named `WorkflowState` in module `invalid_machine_declared_before_state`.
       Note: Statum only resolves `#[state]` enums that have already expanded before this `#[machine]` declaration.
       Note: Source scan found `#[state]` enum `WorkflowState` later in this module on line 17. If that item is active for this build, move it above machine `WorkflowMachine` because Statum resolves these relationships in expansion order.
       Note: No plain enum with that expected name was found in that module either.
       Candidates: No same-named `#[state]` enums were found in other modules of this file.
       Candidates: Available `#[state]` enums in that module: `WorkflowState` in `invalid_machine_declared_before_state` (line 17).
  --> tests/ui/invalid_machine_declared_before_state.rs:13:1
   |
13 | #[machine]
   | ^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)
